[gd_scene load_steps=10 format=3 uid="uid://cby6wx85gu5bq"]

[ext_resource type="Script" path="res://Scenes/Characters/player.gd" id="1_8sweq"]
[ext_resource type="SpriteFrames" uid="uid://chm1i3qp7hy34" path="res://Assets/Spritesheets/snickers_spriteframes.tres" id="2_tjtvg"]
[ext_resource type="PackedScene" uid="uid://gda7pguu8pci" path="res://Scenes/Components/input_component.tscn" id="3_7pb2u"]
[ext_resource type="PackedScene" uid="uid://chcm063ym44xe" path="res://Scenes/Components/movement_component.tscn" id="4_v85b2"]
[ext_resource type="PackedScene" uid="uid://k15y10r6bpwp" path="res://Scenes/Components/animation_component.tscn" id="5_e7cyn"]
[ext_resource type="PackedScene" uid="uid://d4jeq74baygt6" path="res://Scenes/Components/speech_component.tscn" id="6_vsmh3"]
[ext_resource type="PackedScene" uid="uid://dnns10i1qvg63" path="res://Scenes/SpeechBubble/speech_bubble.tscn" id="7_fdrfn"]
[ext_resource type="AudioStream" uid="uid://bgpx24gpxka8c" path="res://Assets/SFX/show_document.wav" id="8_5a48c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iunm8"]
radius = 5.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input_component", "movement_component", "animation_component", "speech_component")]
script = ExtResource("1_8sweq")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
speech_component = NodePath("SpeechComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_tjtvg")
animation = &"show_card_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_iunm8")

[node name="InputComponent" parent="." instance=ExtResource("3_7pb2u")]

[node name="MovementComponent" parent="." instance=ExtResource("4_v85b2")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_e7cyn")]
sprite = NodePath("../AnimatedSprite2D")

[node name="SpeechComponent" parent="." node_paths=PackedStringArray("speech_bubble") instance=ExtResource("6_vsmh3")]
speech_bubble = NodePath("../SpeechBubble")

[node name="SpeechBubble" parent="." instance=ExtResource("7_fdrfn")]
visible = false
position = Vector2(0, -39)

[node name="ShowLicenseAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5a48c")
